src/app/Styles/Cart.css
#container {
  background-color: white;
  border-radius: 10px;
  color: black;
  padding: 10px;
  user-select: none;
  transition: 0.3s;
}

#container:hover {
  cursor: pointer;
  background-color: #999;
}

#cart {
  font-size: 20px;
  padding: 10px;
  position: relative;
  margin-right: 10px;
}

#badge {
  font-size: 12px;

  border-radius: 50%;
  padding: 3px;
  position: absolute;
  top: 15px;
  right: 20px;
  color: wheat;
  background-color: rgb(197, 59, 59);
  min-width: 10px;
  height: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#cartItem {
  position: fixed;
  background-color: white;
  height: 40vh;
  width: 60vw;
  margin-top: 4vh;
  right: 1.5vw;
  z-index: 1;
  box-shadow: 0px 20px 40px #555;
  border-radius: 10px;
}

#itemList {
  position: relative;
}

#closeBtn {
  position: absolute;
  right: 20px;
  top: 10px;
  cursor: pointer;
}

#list {
  padding-top: 30px;
}

